# magnus

./: README.md  magnus  mirrus  pyproject.toml  setup.py
data/: mirrus-autostart.desktop  mirrus.1  mirrus.desktop
mirrus/: __init__.py  mirrus  mirrus.py
